data/collection/fixes/descriptions/kotlin/KT-14887
```
inline fun foo() {
    unresolved().another()
}

fun main(args: Array<String>) {
    foo()
}
```

```
1.kt:2:5: error: unresolved reference: unresolved
    unresolved().another()
    ^
1.kt:2:18: error: public-API inline function cannot access non-public-API 'internal open fun <ERROR FUNCTION>(): [ERROR : <ERROR FUNCTION RETURN TYPE>] defined in root package'
    unresolved().another()
                 ^
```